--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,10 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
+
 *, *::before, *::after {
   box-sizing: border-box;
 }
 body {
-    font-family: sans-serif;
+    font-family: 'Poppins', sans-serif;
     font-size: 1rem;
     font-weight: 400;
     line-height: 1.4;
@@ -32,11 +34,29 @@ body {
     font-weight: 430;
     line-height: 1.25;
     margin-bottom: 0.5rem;
+    text-align: center;
   }
   
   p {
     font-size: 1.130rem;
     margin-top: 0;
+    text-align: center;
+    font-style: italic;
+    font-weight: 220;
+    text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.4);
   }
-  
-  
+
+  .header {
+    padding: 0 0.6rem;
+    margin-bottom: 2rem;
+  }
+  .container {
+    width: 100%;
+    margin: 3rem auto 0 auto;
+  }
+  label {
+    display: flex;
+    align-items: center;
+    font-size: 1.3rem;
+    margin-bottom: 0.5rem;
+  }
