--- a/styles.css
+++ b/styles.css
@@ -54,9 +54,39 @@ body {
     width: 100%;
     margin: 3rem auto 0 auto;
   }
+  @media (min-width: 576px) {
+    .container {
+      max-width: 540px;
+    }
+  }
+  
+  @media (min-width: 768px) {
+    .container {
+      max-width: 720px;
+    }
+  }
   label {
     display: flex;
     align-items: center;
     font-size: 1.3rem;
     margin-bottom: 0.5rem;
   }
+
+input, select, textarea {
+  margin: 0;
+  font-family: inherit;
+  font-size: inherit;
+  line-height: inherit;
+}
+.optional {
+  margin-left: 0.25rem;
+  font-size: 1rem;
+  color: #e4e4e4;
+}
+button {
+  border: none;
+  margin: 0;
+  font-family: inherit;
+  font-size: inherit;
+  line-height: inherit;
+}
