--- a/styles.css
+++ b/styles.css
@@ -90,3 +90,35 @@ button {
   font-size: inherit;
   line-height: inherit;
 }
+form {
+  background: rgba(5, 5, 30, 0.5);
+  padding: 2.5rem 0.625rem;
+  border-radius: 0.25rem;
+}
+.form-control {
+  display: block;
+  width: 100%;
+  height: 2.3rem;
+  padding: 0.3rem 0.75rem;
+  color: #495057;
+  background-color: #fff;
+  background-clip: padding-box;
+  border: 1px solid #ced4da;
+  border-radius: 0.25rem;
+  transition: border-color 0.15s ease-in-out;
+  transition: box-shadow 0.15s ease-in-out;
+}
+.form-control:focus {
+  border-color: #80bdff;
+  outline: 0;
+  box-shadow: 0 0 0 0.2rem rgba(0, 123, 255, 0.25);
+}
+@media (min-width: 480px) {
+  form {
+    padding: 2.5rem;
+  }
+}
+.form-group {
+  margin: 0 auto 1.25rem auto;
+  padding: 0.25rem;
+}
