--- a/styles.css
+++ b/styles.css
@@ -40,7 +40,8 @@ body {
   p {
     font-size: 1.130rem;
     margin-top: 0;
-    text-align: center;
+  }
+  #discription{
     font-style: italic;
     font-weight: 220;
     text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.4);
@@ -121,4 +122,10 @@ form {
 .form-group {
   margin: 0 auto 1.25rem auto;
   padding: 0.25rem;
+}
+.input-radio, .input-checkbox {
+  display: inline-block;
+  margin-right: 0.6rem;
+  min-height: 1.25rem;
+  min-width: 1.25rem;
 }
