--- a/styles.css
+++ b/styles.css
@@ -69,7 +69,7 @@ body {
   label {
     display: flex;
     align-items: center;
-    font-size: 1.3rem;
+    font-size: 1.2rem;
     margin-bottom: 0.5rem;
   }
 
@@ -128,4 +128,19 @@ form {
   margin-right: 0.6rem;
   min-height: 1.25rem;
   min-width: 1.25rem;
+}
+textarea {
+  min-height: 130px;
+  width: 100%;
+  padding: 0.6rem;
+  resize: vertical;
+}
+.btn {
+  display: block;
+  width: 100%;
+  padding: 0.75rem;
+  background: green;
+  color: inherit;
+  border-radius: 2px;
+  cursor: pointer;
 }
