--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
 
-*, *::before, *::after {
+*,
+*::before, 
+*::after {
   box-sizing: border-box;
 }
+
 body {
     font-family: 'Poppins', sans-serif;
     font-size: 1rem;
@@ -11,6 +14,7 @@ body {
     color: white;
     margin: 0;
   }
+
   body::before {
     height: 100%;
     width: 100%;
@@ -22,7 +26,8 @@ body {
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
-    background-image: linear-gradient(
+    background-image: 
+    linear-gradient(
         115deg,
         rgba(111, 58, 158, 0.8),
         rgba(217, 134, 223, 0.7)
@@ -38,15 +43,17 @@ body {
   }
   
   p {
-    font-size: 1.130rem;
+    font-size: 1.13rem;
     margin-top: 0;
   }
-  #discription{
+
+  #discription {
     font-style: italic;
     font-weight: 220;
     text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.4);
   }
-  .center{
+
+  .center {
     text-align: center;
   }
 
@@ -54,10 +61,12 @@ body {
     padding: 0 0.6rem;
     margin-bottom: 2rem;
   }
+
   .container {
     width: 100%;
     margin: 3rem auto 0 auto;
   }
+
   @media (min-width: 576px) {
     .container {
       max-width: 540px;
@@ -69,6 +78,7 @@ body {
       max-width: 720px;
     }
   }
+
   label {
     display: flex;
     align-items: center;
@@ -76,17 +86,21 @@ body {
     margin-bottom: 0.5rem;
   }
 
-input, select, textarea {
+input, 
+select, 
+textarea {
   margin: 0;
   font-family: inherit;
   font-size: inherit;
   line-height: inherit;
 }
+
 .optional {
   margin-left: 0.25rem;
   font-size: 1rem;
   color: #e4e4e4;
 }
+
 button {
   border: none;
   margin: 0;
@@ -94,11 +108,13 @@ button {
   font-size: inherit;
   line-height: inherit;
 }
+
 form {
   background: rgba(5, 5, 30, 0.5);
   padding: 2.5rem 0.625rem;
   border-radius: 0.25rem;
 }
+
 .form-control {
   display: block;
   width: 100%;
@@ -112,32 +128,39 @@ form {
   transition: border-color 0.15s ease-in-out;
   transition: box-shadow 0.15s ease-in-out;
 }
+
 .form-control:focus {
   border-color: #80bdff;
   outline: 0;
   box-shadow: 0 0 0 0.2rem rgba(0, 123, 255, 0.25);
 }
+
 @media (min-width: 480px) {
   form {
     padding: 2.5rem;
   }
 }
+
 .form-group {
   margin: 0 auto 1.25rem auto;
   padding: 0.25rem;
 }
-.input-radio, .input-checkbox {
+
+.input-radio, 
+.input-checkbox {
   display: inline-block;
   margin-right: 0.6rem;
   min-height: 1.25rem;
   min-width: 1.25rem;
 }
+
 textarea {
   min-height: 130px;
   width: 100%;
   padding: 0.6rem;
   resize: vertical;
 }
+
 .btn {
   display: block;
   width: 100%;
