--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,9 @@
 }
 
 body {
-  font-family: 'Poppins', sans-serif;
+  font-family:
+  'Poppins', 
+  sans-serif;
   font-size: 1rem;
   font-weight: 400;
   line-height: 1.4;
@@ -26,7 +28,7 @@ body::before {
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
-  background-image: 
+  background-image:
     linear-gradient(
       115deg,
       rgba(111, 58, 158, 0.8),
